# evaltron-experiments

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml
prompts/: eval_awareness_pairs.jsonl  matched_pairs.jsonl  type_hints_pairs.jsonl  validation_prompts.jsonl  validation_system_prompts.jsonl
results/: matched_records.json  validation_records.json
scripts/: run_analysis.py  run_deconfound.py  run_extraction.py  run_lora_analysis.py  run_matched_analysis.py  run_matched_extraction.py  run_validation.py  submit_analysis.py  submit_deconfound.py  submit_extraction.py  submit_lora_analysis.py  submit_matched_analysis.py  submit_matched_extraction.py  submit_validation.py
slurm/: analyze.sbatch  deconfound.sbatch  extract_activations.sbatch  lora_analysis.sbatch  matched_analysis.sbatch  matched_extraction.sbatch  validate.sbatch
src/: activation_extractor.py  behavioral_validation.py  deconfound_analysis.py  direction_analysis.py  lora_subspace_analysis.py  matched_analysis.py  matched_extraction.py  model_loader.py  prompt_runner.py
