[project]
name = "evaltron-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "peft>=0.18.1",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.44,<4.50",
]
